# gepa-artifact

./: launch_commands  pyproject.toml
experiment_runs_data/: gepa_run_log.txt
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_1/: iter_3_prog_2.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_10/: iter_3_prog_2.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_100/: iter_77_prog_18.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_103/: iter_1_prog_1.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_107/: iter_1_prog_1.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_108/: iter_3_prog_2.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_11/: iter_23_prog_5.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_110/: iter_1_prog_1.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_118/: iter_23_prog_5.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_120/: iter_9_prog_4.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_121/: iter_1_prog_1.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_122/: iter_4_prog_3.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_123/: iter_29_prog_7.json
experiment_runs_data/gepa_hover_300_7000/generated_best_outputs_valset/task_125/: iter_4_prog_3.json
scripts/: experiment_configs.py  generate_launch_commands.py
(+105 files in other folders)
